# magnetico-next

./: Cargo.toml
cmd/magneticod/: main.go
cmd/magneticod/bittorrent/metadata/: leech.go  sink.go
cmd/magneticod/dht/: managers.go
cmd/magneticod/dht/mainline/: indexingService.go
cmd/magneticow/data/static/scripts/: torrents.js
cmd/magneticow/data/static/styles/: torrents.css
cmd/magneticow/data/templates/: torrents.html
pkg/persistence/: sqlite3.go
src/: config.rs  lib.rs  main.rs
src/api/: auth.rs  error.rs  handlers.rs  mod.rs  models.rs  routes.rs  web.rs
src/crawler/: codec.rs  dht.rs  indexing.rs  metadata.rs  mod.rs  sink.rs  transport.rs
src/metrics/: mod.rs
src/storage/: migration.rs  mod.rs  rocksdb.rs  schema.rs  search.rs
src/web/: filters.rs  mod.rs  templates.rs
