[package]
name = "magnetico"
version = "0.1.0"
edition = "2021"
authors = ["Magnetico Contributors"]
description = "Autonomous BitTorrent DHT crawler and search engine"
license = "AGPL-3.0"
repository = "https://github.com/boramalper/magnetico"

[[bin]]
name = "magnetico"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-gzip", "compression-br", "cors", "fs"] }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
serde_bencode = "0.2"

# Storage
rocksdb = { version = "0.24", default-features = false, features = ["snappy"] }
tantivy = "0.22"
tempfile = "3.8"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env", "cargo"] }
config = "0.14"
toml = "0.8"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
governor = "0.6"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
bytes = "1"
indicatif = { version = "0.17", optional = true }
rand = "0.8"

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# System calls
nix = { version = "0.29", features = ["socket", "net"] }
libc = "0.2"

# Optional for migration
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[features]
default = ["migration"]
migration = ["rusqlite", "indicatif"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

